Add application properties support and rabbitmq support.